<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="feedbackForm">Форма обратной связи</string>
    <string name="sendToDeveloper">О разработчике</string>
    <string name="communicate">Communicate</string>
    <string name="importItem">Import</string>
    <string name="galleryItem">Gallery</string>
    <string name="slideshowItem">Slideshow</string>
    <string name="toolsItem">Tools</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="choose_from_camera">Choose from camera</string>
    <string name="choose_from_galery">Choose from galery</string>
    <string name="open_from_web">Open from web</string>
    <string name="submit">Submit</string>
    <string name="open_sensors">Open sensors</string>
</resources>
